--- a/style.css
+++ b/style.css
@@ -1,27 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&display=swap');
 
 :root{
-    --yellow:#2448f9;
+    --blue:#fff;
 }
 
 *{
     font-family: 'Nunito', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
-    text-decoration: none;
-    outline: none; border:none;
-    text-transform: capitalize;
-    transition: all .2s linear;
+    outline: none;
+    border:none;
+    transition: all 0.1s linear;
+    text-decoration: none !important;
+    font-weight: 200;
+    letter-spacing: 0.5px;
 }
 
 *::selection{
-    background:var(--yellow);
+    background:var(--blue);
     color:#333;
 }
 
 html{
     font-size: 62.5%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar{
@@ -33,7 +36,7 @@ html::-webkit-scrollbar-track{
 }
 
 html::-webkit-scrollbar-thumb{
-    background:var(--yellow);
+    background:var(--blue);
 }
 
 body{
@@ -51,21 +54,12 @@ section{
     padding:.7rem 3rem;
     background:#333;
     color:#fff;
-    cursor: pointer;
     margin-top: 1rem;
     font-size: 2rem;
     border-radius: 5rem;
 }
 
-.btn i{
-    padding:0 .5rem;
-    font-size: 1.8rem;
-}
-
-.btn:hover{
-    background:var(--yellow);
-}
-
+/* --------------------------------------------------------------------------------------------- */
 .heading{
     text-align: center;
     margin:0 6rem;
@@ -76,7 +70,7 @@ section{
 }
 
 .heading span{
-    color:var(--yellow);
+    color:var(--blue);
 }
 
 header{
@@ -94,19 +88,21 @@ header{
 }
 
 header .user img{
-    height:17rem;
-    width:17rem;
+    height:13rem;
+    width:13rem;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 1rem;
-    border:.7rem solid var(--yellow);
+    border:.2rem solid var(--blue);
 }
 
 header .user .name{
-    font-size: 3.5rem;
-    color:#fff;
+    font-size: 3rem;
+    color:#2baed2;
 }
-
+header .user h3{
+    font-weight: 400;
+}
 header .user .post{
     font-size: 2rem;
     color:#eee;
@@ -133,19 +129,15 @@ header .navbar ul li a{
 }
 
 header .navbar ul li a:hover{
-    background:var(--yellow);
+    background:var(--blue);
+    color: black;
+    font-weight: 600;
 }
+/* -------------------------------------------------------------------------------------------------------- */
 
-#menu{
-    position: fixed;
-    top:2rem; right:2rem;
-    background:#333;
-    color:#fff;
-    cursor: pointer;
-    font-size: 2.5rem;
-    padding:1rem 1.5rem;
-    z-index: 1000;
-    display: none;
+#main-head{
+    color: #2baed2;
+    font-weight: 400;
 }
 
 .home{
@@ -163,10 +155,7 @@ header .navbar ul li a:hover{
 .home h1{
     font-size:5rem;
     color:#fff;
-}
-
-.home h1 span{
-    color:var(--yellow);
+    font-weight: 400    ;
 }
 
 .home p{
@@ -174,13 +163,47 @@ header .navbar ul li a:hover{
     color:#eee;
     padding: 1rem 0;
 }
+.home a{
+    width: 200px;
+}
+.home .btn{
+    background: #fff;
+    color: black;
+    font-weight: 600;
+}
 
+.home a .btn:hover{
+    scale: 0.98;
+    background-color: #2baed2;
+    cursor: pointer;
+}
+
+
+
+/* ----------------------------------------------------------------------------------------------------------- */
+.about h1{
+    font-weight: 600;
+}
 .about .row{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding:1rem 0;
+    padding:10rem 0;
+}
+
+.about .row .btn{
+    margin-top: 20px;
+    background-color: #fff;
+    color: black;
+    font-weight: 600;
+    cursor: pointer;
+
+}
+.about .row .btn:hover{
+    background: #2baed2;
+    color: black;
+    scale: 0.98;
 }
 
 .about .row .info{
@@ -191,9 +214,10 @@ header .navbar ul li a:hover{
 
 .about .row .info h3{
     font-size: 2rem;
-    color:var(--yellow);
+    color:var(--blue);
     padding:1rem 0;
     font-weight: normal;
+    font-weight: 200;
 }
 
 .about .row .info h3 span{
@@ -218,91 +242,18 @@ header .navbar ul li a:hover{
 
 .about .row .counter .box span{
     font-size: 4rem;
-    color:var(--yellow);
+    color: #2baed2;
+    font-weight: 400;
 }
 
 .about .row .counter .box h3{
     font-size: 2rem;
     color:#fff;
 }
-
-.education .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding:1rem 0;
-    padding-left: 3rem;
+/* -------------------------------------------------------------------------------------------------------- */
+.contact h1{
+    font-weight: 400;
 }
-
-.education .box-container .box{
-    width:27rem;
-    margin:4rem 1rem;
-    padding-left: 4rem;
-    border-left: .2rem solid #fff;
-    position: relative;
-}
-
-.education .box-container .box span{
-    font-size: 1.3rem;
-    background:#222;
-    color:#fff;
-    border-radius: 5rem;
-    padding:.5rem 2.5rem;
-}
-
-.education .box-container .box h3{
-    font-size: 2rem;
-    color:#fff;
-    padding-top: 1.5rem;
-}
-
-.education .box-container .box p{
-    font-size: 1.4rem;
-    color:#eee;
-    padding: 1rem 0;
-}
-
-.education .box-container .box i{
-    position: absolute;
-    top:-1.5rem; left:-2.5rem;
-    height:5rem;
-    width: 5rem;
-    border-radius: 50%;
-    line-height: 5rem;
-    text-align: center;
-    font-size: 2rem;
-    color:#fff;
-    background:var(--yellow);
-}
-
-.portfolio .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding:2rem 0;
-}
-
-.portfolio .box-container .box{
-    height: 20rem;
-    width:26rem;
-    border-radius: 1rem;
-    margin:2rem;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.portfolio .box-container .box img{
-    height:100%;
-    width:100%;
-    object-fit: cover;
-}
-
-.portfolio .box-container .box:hover img{
-    transform: scale(1.2);
-}
-
 .contact .row{
     display: flex;
     align-items: center;
@@ -322,11 +273,21 @@ header .navbar ul li a:hover{
     margin:2rem;
     margin-bottom: 4rem;
 }
+.contact .row form button{
+    background: white;
+    font-weight: 600;
+    color: black;
+}
+.contact .row form button:hover{
+    background-color: #2baed2;
+    cursor: pointer;
+    scale: 0.95;
+}
 
 .contact .row form .box{
     padding:1.5rem;
     margin:1rem 0;
-    background:#3333;
+    background:#57565633;
     color:#fff;
     text-transform: none;
     font-size: 1.7rem;
@@ -343,11 +304,12 @@ header .navbar ul li a:hover{
 }
 
 .contact .row .content .title{
-    text-transform: uppercase;
-    color:#fff;
+    color: #2baed2;
     font-size: 3rem;
     padding-bottom: 2rem;
+    font-weight: 400;
 }
+
 
 .contact .row .content .info h3{
     display: flex;
@@ -360,8 +322,9 @@ header .navbar ul li a:hover{
 
 .contact .row .content .info h3 i{
     padding-right: 1rem;
-    color:var(--yellow);
+    color:var(--blue);
 }
+
 
 .top{
     position: fixed;
