--- a/services/styles1.css
+++ b/services/styles1.css
@@ -1,9 +1,18 @@
 body {
-    font-family: product system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Nunito', sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 1.2rem;
     margin: 0;
     padding: 0;
 }
-
+.aboutus {
+    text-align: left;
+    color: white;
+}
+h1 {
+    font-weight: normal;
+    color: #2baed2;
+}
 header {
     background-color: #333;
     color: #fff;
@@ -19,15 +28,10 @@ header {
 }
 
 .parallax {
-    background-image: url('pexels-dana-tentis-370799.jpg');
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+    background-color: #111;
 }
 
-h1, h2, p, li {
+h2, p, li {
     color: #fff;
 }
 
