--- a/services/styles2.css
+++ b/services/styles2.css
@@ -1,15 +1,21 @@
 /* Add your CSS styling here */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Nunito', sans-serif;
+    font-weight: normal;
+    letter-spacing: 0.5px;
+    font-size: 1.2rem;
     margin: 0;
     padding: 0;
-    background-image: url('pexels-dana-tentis-370799.jpg');
+    color: white;
+    background-color: #111;
   }
-  
+  h2 {
+    color: #2baed2;
+    font-weight: normal;
+  }
   header {
     background-color: #333;
-    color: #fff;
     padding: 20px;
   }
   
